Connecting the Landingpage to login and signup page

--- a/src/Components/LandingPageComponents/styles/HeroSection.css
+++ b/src/Components/LandingPageComponents/styles/HeroSection.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('../../assets/neu_bg.jpg') center center/cover no-repeat;
+  background: center center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
