--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,10 @@
   font-family: sans-serif;
   
 }
-
 html, body, #root {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+  height: 100%;
 }
+
 .container{
   padding-left: 0;
   padding-right: 0;
