--- a/src/Components/LandingPageComponents/styles/HeroSection.css
+++ b/src/Components/LandingPageComponents/styles/HeroSection.css
@@ -2,7 +2,9 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: center center/cover no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
