updated the register bg the client dash board

--- a/src/Components/Register/SignIn/SignIn.css
+++ b/src/Components/Register/SignIn/SignIn.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/NEU_Main_Campus%2C_Central_Avenue%2C_New_Era%2C_Quezon_City.jpg/330px-NEU_Main_Campus%2C_Central_Avenue%2C_New_Era%2C_Quezon_City.jpg');
   background-color: #002f6c;
   background-size: cover;
   background-position: center;
